fixed bugs
- added extra padding on icons
- fixed server status'

--- a/style.css
+++ b/style.css
@@ -128,8 +128,8 @@ li img {
     scale: 100%;
     color: white;
     fill: currentColor;
-    padding-right: 5px;
-    padding-left: 5px;
+    padding-right: 10px;
+    padding-left: 10px;
     transition: transform 350ms ease-in-out;
 }
 
